--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/styled-components": "^5.1.0",
     "@zeit/next-css": "^1.0.1",
+    "mkdirp": "^1.0.4",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
